# JastieApi

./: .env.example  .gitignore  .gitmodules  Dockerfile  README.md  alembic.ini  compose.yaml  dev-compose.yaml  main.py  peres.py  pyproject.toml  test-compose.yaml  test.env
.github/workflows/: docker-image.yml
jastieapi/app/: __init__.py  config.py  core.py  exceptions.py  helpers.py  include.py  typevars.py
jastieapi/app/admin/: __init__.py  datamodels.py  routes.py
jastieapi/app/bot_methods/: __init__.py  data_models.py  methods.py
jastieapi/app/matches/: __init__.py  methods.py  routes.py
jastieapi/app/middlewares/: __init__.py  core.py  logger.py
jastieapi/app/skins/: __init__.py  client.py  routes.py
jastieapi/app/users/: __init__.py  codes.py  datamodels.py  routes.py
jastieapi/app/vendors/: __init__.py  callbacks.py  datamodels.py  routes.py
migrations/: env.py
migrations/versions/: 0033b33c6e97_vendors_data.py  25f2872aa7cc_referral_primary.py  70bb9c6da6a1_operations_recreate.py  b472b360fa68_referrer_referrer_id.py  f412a33aa4da_match_url_add.py
tests/: conftest.py  test_tg.py  test_users.py
