[tool.poetry]
name = "jastieapi"
version = "0.1.0"
description = ""
authors = ["halone <haloneprog@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.109.0"
aiogram = {extras = ["types"], version = "^3.3.0"}
jastiedatabase = {path = "JastieDatabase", develop = true}
pyrogram = "^2.0.106"
pydantic-settings = "^2.1.0"
uvicorn = "^0.27.0.post1"
aiocache = "^0.12.2"
python-dotenv = "^1.0.1"
alembic = "^1.13.1"
psycopg2-binary = "^2.9.9"
pytest = "^8.0.0"
anyio = "^4.2.0"
pytest-asyncio = "^0.23.5"
aiohttp = "^3.9.3"
beautifulsoup4 = "^4.12.3"

[tool.poetry.scripts]
dev = "main:start_dev"
prod = "main:start_prod"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
